// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchLabeled component tests SwitchLabeled rendering SwitchLabeled renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderWidth": 0,
        "flex": 1,
        "flexDirection": "row",
        "marginBottom": 10,
        "marginTop": 5,
      }
    }
  >
    <RCTSwitch
      disabled={false}
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#4A90E2"
      onValueChange={undefined}
      style={
        Array [
          Object {
            "height": 31,
            "width": 51,
          },
          Object {
            "marginRight": 10,
          },
        ]
      }
      value={false}
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontFamily": "Roboto",
          "fontSize": 16,
          "fontWeight": "normal",
          "letterSpacing": 0,
          "lineHeight": 22,
          "marginRight": 60,
        }
      }
    >
      Testing SwitchLabeled
    </Text>
  </View>
</View>
`;

exports[`SwitchLabeled component tests SwitchLabeled rendering SwitchLabeled renders correctly with set value 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderWidth": 0,
        "flex": 1,
        "flexDirection": "row",
        "marginBottom": 10,
        "marginTop": 5,
      }
    }
  >
    <RCTSwitch
      disabled={false}
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#4A90E2"
      onValueChange={undefined}
      style={
        Array [
          Object {
            "height": 31,
            "width": 51,
          },
          Object {
            "marginRight": 10,
          },
        ]
      }
      value={true}
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "white",
          "fontFamily": "Roboto",
          "fontSize": 16,
          "fontWeight": "normal",
          "letterSpacing": 0,
          "lineHeight": 22,
          "marginRight": 60,
        }
      }
    >
      Testing SwitchLabeled
    </Text>
  </View>
</View>
`;
